--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,16 @@ img {
 	background: url('../img/background.jpg') no-repeat center center/cover;
 }
 
-.showcase-top {
-	position: relative;
-	height: 90px;
+.showcase::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	background: rgba(0, 0, 0, 0.6);
+	box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
 }
 
 .showcase img {
@@ -57,6 +64,12 @@ img {
 	top: 50%;
 	left: 12%;
 	transform: translate(-50%, -50%);
+}
+
+.showcase-top {
+	position: relative;
+	z-index: 2;
+	height: 90px;
 }
 
 .showcase-top a {
@@ -68,6 +81,7 @@ img {
 
 .showcase-content {
 	position: relative;
+	z-index: 2;
 	margin: auto;
 	display: flex;
 	flex-direction: column;
